# magic_fs

./: LICENSE  README.md  requirements.txt  setup.cfg
magic_fs/: fs.py  rar.py
module2/: requirements.txt  setup.cfg
