[bdist_wheel]
universal = 1

[metadata]
name = magic_fs
version = 0.0.1

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
setup_requires =
    
install_requires =
    # Explosion-provided dependencies
    fs>=2.4.11
    rarfile
    python-magic


[mypy]
ignore_missing_imports = true
